Bug 366368 - No transparent background when compositor is enabled
Summary: No transparent background when compositor is enabled
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: 16.04.3
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Martin Sandsmark
URL:
Keywords:
: 367993 368043 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-08-03 07:31 UTC by Oded Arbel
Modified: 2017-06-22 21:33 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Oded Arbel 2016-08-03 07:31:31 UTC
Since 5.7.2, transparent backgrounds no longer work in Konsole.

When looking into the profile's appearance tab, the following message is shown:

Konsole was started before desktop effects were enabled. You need to restart Konsole to see transparent background.

Compositing works fine - transparent windows and panels all work fine.

Reproducible: Always
Comment 1 Martin Sandsmark 2016-08-13 13:47:53 UTC
https://git.reviewboard.kde.org/r/128669/
Comment 2 Martin Sandsmark 2016-08-13 18:33:51 UTC
Git commit a28902e9120798c67844864a11bbe3f1c2549b74 by Martin T. H. Sandsmark.
Committed on 13/08/2016 at 18:33.
Pushed by sandsmark into branch 'master'.

Fix transparent backgrounds

It's apparently not possible to set WA_TranslucentBackground after
show(). The MainWindow constructor calls applyKonsoleSettings() which
calls KMainWindow::setAutoSaveSettings() which in turn calls
setVisible(true), which makes any calls to setTransparency() from the
Application::newMainWindow() irrelevant, even if updateUseTransparency()
is called from it.

REVIEW: 128669

M  +3    -1    src/Application.cpp
M  +5    -10   src/MainWindow.cpp
M  +0    -2    src/MainWindow.h

http://commits.kde.org/konsole/a28902e9120798c67844864a11bbe3f1c2549b74
Comment 3 Kurt Hindenburg 2016-08-13 20:16:44 UTC
Git commit fca305ebffd331701b59e68ab446db9618987b6f by Kurt Hindenburg, on behalf of Martin T. H. Sandsmark.
Committed on 13/08/2016 at 20:06.
Pushed by hindenburg into branch 'Applications/16.08'.

Fix transparent backgrounds

It's apparently not possible to set WA_TranslucentBackground after
show(). The MainWindow constructor calls applyKonsoleSettings() which
calls KMainWindow::setAutoSaveSettings() which in turn calls
setVisible(true), which makes any calls to setTransparency() from the
Application::newMainWindow() irrelevant, even if updateUseTransparency()
is called from it.

REVIEW: 128669
(cherry picked from commit a28902e9120798c67844864a11bbe3f1c2549b74)

M  +3    -1    src/Application.cpp
M  +5    -10   src/MainWindow.cpp
M  +0    -2    src/MainWindow.h

http://commits.kde.org/konsole/fca305ebffd331701b59e68ab446db9618987b6f
Comment 4 Wolfgang Bauer 2016-08-30 09:24:28 UTC
*** Bug 367993 has been marked as a duplicate of this bug. ***
Comment 5 Christoph Feck 2016-08-31 17:41:09 UTC
*** Bug 368043 has been marked as a duplicate of this bug. ***
Comment 6 John Andrew McInnes 2017-06-22 04:08:26 UTC
KDE Plasma 5.10.0
KDE Frameworks 5.34.0
x86_64

I have encountered this bug in Konsole version 17.04.1. Konsole is started/restored on login as per my previous session. Transparency is not working and I get the message on the appearance tab. If I exit and restart Konsole it works again. Maybe Konsole is starting too soon? Kind of annoying, but not a major bug.
Comment 7 John Andrew McInnes 2017-06-22 21:33:36 UTC
(In reply to John Andrew McInnes from comment #6)
> KDE Plasma 5.10.0
> KDE Frameworks 5.34.0
> x86_64
> 
> I have encountered this bug in Konsole version 17.04.1. Konsole is
> started/restored on login as per my previous session. Transparency is not
> working and I get the message on the appearance tab. If I exit and restart
> Konsole it works again. Maybe Konsole is starting too soon? Kind of
> annoying, but not a major bug.

Ok.. its been doing this for months. But today I can't reproduce it. disregard.